Changed some collection types Removed @JsonIgnore from messages